[tool.poetry]
name = "pyxplr"
version = "0.1.0"
description = "Python package that provides some basic data information for EDA!"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
