[tool.poetry]
name = "pyxplr"
version = "0.1.0"
description = "Python package that provides some basic data information for EDA!"
authors = ["Braden Tam", "Furqan Khan", "Serg Pokrovskyy", "Yu Fang"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
